Releasing m2e 1.7 - part 1
Signed-off-by: Fred Bricon <fbricon@gmail.com>