@@ -7,7 +7,7 @@ title:  Development Environment
 
 Download and unpack Eclipse latest SDK build from <http://download.eclipse.org/eclipse/downloads/> . The instructions below assume fresh/clean Eclipse installation.
 
-Install M2Eclipse 1.6 or newer from <http://download.eclipse.org/technology/m2e/releases> . This is a P2 repository URL, use Eclipse Install UI to use it as explained in <http://help.eclipse.org/topic/org.eclipse.platform.doc.user/tasks/tasks-127.htm>
+Install M2Eclipse 1.7 or newer from <http://download.eclipse.org/technology/m2e/releases> . This is a P2 repository URL, use Eclipse Install UI to use it as explained in <http://help.eclipse.org/topic/org.eclipse.platform.doc.user/tasks/tasks-127.htm>
 
 Clone the M2Eclipse Core repository, see <https://git.eclipse.org/r/#/admin/projects/m2e/m2e-core> for the list of available protocols.
 
@@ -20,7 +20,7 @@ Import org.eclipse.m2e.workspace, m2e-core and m2e-core-tests as existing maven 
 Add the following memory configuration parameters to JVM startup options
 
 ```
--XX:MaxPermSize=256m -Xmx1G
+-Xmx1G
 ```
 
 Use JUnit Plug-in Tests launch configuration type to run/debug M2Eclipse automated regressions tests from Eclipse.
